WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
244080
PseudoElement should use WeakPtr<Element> instead of Element*
https://bugs.webkit.org/show_bug.cgi?id=244080
Summary
PseudoElement should use WeakPtr<Element> instead of Element*
Ryosuke Niwa
Reported
2022-08-18 00:52:38 PDT
Don't use raw pointer in PseudoElement.
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2022-08-18 00:55:49 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/3444
EWS
Comment 2
2022-08-18 14:08:56 PDT
Committed
253571@main
(c2adf3f6626d): <
https://commits.webkit.org/253571@main
> Reviewed commits have been landed. Closing PR #3444 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-08-18 14:10:20 PDT
<
rdar://problem/98849940
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug