PseudoElement should use WeakPtr<Element> instead of Element* https://bugs.webkit.org/show_bug.cgi?id=244080

Reviewed by Chris Dumez.

* Source/WebCore/dom/PseudoElement.cpp:
(WebCore::PseudoElement::PseudoElement):
(WebCore::PseudoElement::clearHostElement):
(WebCore::PseudoElement::rendererIsNeeded):
* Source/WebCore/dom/PseudoElement.h:

Canonical link: https://commits.webkit.org/253571@main