Source/WebCore/dom/PseudoElement.h
@@ -37,7 +37,7 @@ public:
     static Ref<PseudoElement> create(Element& host, PseudoId);
     virtual ~PseudoElement();
 
-    Element* hostElement() const { return m_hostElement; }
+    Element* hostElement() const { return m_hostElement.get(); }
     void clearHostElement();
 
     bool rendererIsNeeded(const RenderStyle&) override;
@@ -50,7 +50,7 @@ private:
 
     PseudoId customPseudoId() const override { return m_pseudoId; }
 
-    Element* m_hostElement;
+    WeakPtr<Element> m_hostElement;
     PseudoId m_pseudoId;
 };
 
